--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ nav ul li{
 }
 .tree-divs-div-text-wrapper{
     width: 100%;
-    margin:30px auto 0 auto;
+    margin:  20px;
 }
 .news .read-moree {
     display:flex;
