--- a/style.css
+++ b/style.css
@@ -188,9 +188,12 @@ nav ul li{
     max-width: 300px;
     width: 100%;
 }
+.tree-divs-div-img{
+    width: 100%;
+}
 .tree-divs-div-text-wrapper{
     width: 100%;
-    margin:  20px;
+    padding: 10px;
 }
 .news .read-moree {
     display:flex;
