--- a/responsive.css
+++ b/responsive.css
@@ -3,13 +3,18 @@
         margin-top:50px;
     }
 }
-@media (max-width:1024px){
+@media (max-width:1212px){
     .margina{
         margin-top:100px;
     }
     .tree-divs{
         flex-wrap: wrap;
         margin: 0 auto;
+    }
+    
+    .main{
+        flex-direction: column;
+        align-items: center;
     }
 }
 @media (max-width:855px){
@@ -69,10 +74,9 @@
     }
     .nav-links.active{
         display:block;
+        position:absolute;
     }
-    .text-wrapper.active{
-        margin-top:90px;
-    }
+    
     /* 2 */
     .image{
         margin:0 auto;
@@ -99,6 +103,11 @@
     .img2{
         margin:0 auto;
         flex-direction: column;
+    }
+    .image{
+        width:200px;
+        height:350px;
+        background-color: #DFDFDF;
     }
     /* 3 */
     .title-wrapper{
