--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ nav ul li{
     margin-bottom: 38px;
 }
 .image{
-    width:250px;
-    height:450px;
+    width:230px;
+    height:430px;
     background-color: #DFDFDF;
 }
 .img2{
@@ -106,6 +106,7 @@ nav ul li{
 .main-title{
     color:black;
     width:370px;
+    width:100%;
     margin-top:100px;
     
 }
