--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a{
     margin:0px auto;
 }
 .nav-home{
-    background-image:url("img/backgorund.png");
+    background-image:url("/img/backgorund.png");
     background-repeat: no-repeat;
     background-size: cover;
     color:white;
