--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
-html{
-    scroll-behavior: smooth;
-}
-*{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-    
-}
-h1{
-    font-family: 'Montserrat', sans-serif;
-}
-h4{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 500;
-}
-a{
-    scroll-behavior: smooth;
-    text-decoration: none !important;
-}
-.container{
-    max-width:1270px;
-    width: 75%;
-    margin:0px auto;
-}
 .nav-home{
-    background-image:url("img/backgorund.png");
+    background-image:url("/img/backgorund.png");
     background-repeat: no-repeat;
     background-size: cover;
     color:white;
-}
-.nav-home a{
-    color:white;
-}
-.home-wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
-nav{
-    font-size:18px;
-    font-family: 'Montserrat', sans-serif;
-    font-size:14px;
-}
-nav ul{
-    display:flex;
-    line-height: 2;
-}
-nav ul li{
-    padding:15px 10px;
 }
 .text-container{
     text-transform: uppercase;
