--- a/css/works.css
+++ b/css/works.css
@@ -14,7 +14,12 @@
     padding:30px 0px;
 }
 .six-div{
-    display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:40px;
+    grid-area: span;
+}
+.six-div-divs{
+    max-width:350px;
+    width:100%;
 }
