--- a/css/works.css
+++ b/css/works.css
@@ -1,3 +1,7 @@
+body{
+    background-color:rgb(250, 244, 244);
+
+}
 .title .title-p{
     display:flex;
     justify-content: center;
@@ -6,20 +10,35 @@
     font-size:1.5rem;
     
 }
-.works{
-    background-color:rgb(248,244,244);
 
-}
 .title{
     padding:30px 0px;
 }
 .six-div{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap:40px;
-    grid-area: span;
+    grid-gap:25px;
 }
 .six-div-divs{
     max-width:350px;
     width:100%;
+}
+.six-div div{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+.six-div-p{
+    font-size:0.8em;
+    padding-bottom: 15px;
+}
+.six-div-title{
+    font-size:1.2em;
+    padding:15px 0;
+}
+#hidden{
+    display:none;
+}
+.logo{
+    font-family: 'Work Sans', sans-serif;
+    font-weight: Bold;
 }
