--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,63 @@ footer{
     font-weight: 500;
     font-size:0.8em;
 }
+
+
+
+
+@media (max-width:855px){
+    .container{
+        width: 95%;
+    }
+    nav ul{
+        /* display:none; */
+        flex-direction: column;
+        align-items: center;
+
+    }
+    nav ul li{
+        width: 100%;
+        text-align: center;
+    }
+    .nav-links{
+        display:none;
+        width:100%; 
+        flex-direction: column;
+        margin-top:10px;
+    }
+    .fa-bars{
+        display: block;
+        position: absolute;
+        right:0;
+    }
+    .fa-bars:hover{
+        cursor: pointer;
+    }
+    .nav-links.active{
+        display:block;
+    }
+    .home-wrapper{
+        padding-top:25px;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: center;
+    }
+    .text-wrapper{
+        margin:0 auto;
+        margin-top:120px;
+        width:100%;
+        text-align: center;
+    }
+    /* 5 */
+    .footeri{
+        flex-direction: column;
+        text-align: center;
+    }
+    .gotoa{
+        display: flex;
+        margin:25px 0;
+    }
+    .logoebi{
+        width:23px;
+    }
+}
