--- a/css/works.css
+++ b/css/works.css
@@ -1,6 +1,5 @@
 body{
-    background-color:rgb(250, 244, 244);
-
+    background-color:#f6f6f6;
 }
 .title .title-p{
     display:flex;
@@ -43,4 +42,16 @@ body{
 .title-p{
     font-family: 'Work Sans', sans-serif;
     font-weight: Bold;
+}
+
+
+@media (max-width:855px){
+    .six-div{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .six-div-divs{
+        max-width:270px;
+    }
 }
