--- a/css/contact.css
+++ b/css/contact.css
@@ -7,6 +7,11 @@ iframe{
 }
 .contact-info{
     font-family: 'Work Sans', sans-serif;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top:70px;
+    margin-bottom:120px;
 }
 .contact-wrapper{
     max-width:336px;
@@ -19,7 +24,50 @@ iframe{
 }
 .contact-information{
     font-size:15px;
+    padding:20px 0;
+    line-height: 1.7;
 }
 .contact-address{
     font-size:15px;
+}
+form{
+    max-width:600px;
+    width: 100%;
+}
+textarea{
+    width:100%;
+    height: 120px;
+    border-style: none;
+    padding:15px;
+    resize: none;
+    margin-bottom: 27px;
+}
+input{
+    width: 45%;
+    padding:15px;
+    border-style: none;
+    background-color: white;
+    
+}
+.input-wrapper{
+    display:flex;
+    justify-content: space-between;
+    padding:20px 0;
+    
+}
+.btn-dark{
+    border-radius: 0;
+}
+
+
+@media (max-width:855px){
+    .contact-info{
+        margin-top:40px;
+        margin-bottom:70px;
+        text-align: center;
+    }
+    .contact-wrapper{
+        max-width: 100%;
+        margin-bottom: 70px;
+    }
 }
