--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 .nav-home{
+    background-color: none;
     background-image:url("/img/backgorund.png");
     background-repeat: no-repeat;
     background-size: cover;
