--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .nav-home{
     background-color: none;
-    background-image:url("/img/backgorund.png");
+    background-image:url("../img/backgorund.png");
     background-repeat: no-repeat;
     background-size: cover;
     color:white;
