--- a/css/steadfastness.css
+++ b/css/steadfastness.css
@@ -3,7 +3,8 @@ body{
 }
 
 .home-title{
-    background-image:url("/img/backgorund.png");
+    background-color: none;
+    background-image:url("../img/backgorund.png");
     background-repeat: no-repeat;
     background-size: cover;
     color:white;
