--- a/css/works.css
+++ b/css/works.css
@@ -57,6 +57,7 @@ a:hover{
         display:flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 20px;
     }
     .six-div-divs{
         max-width:270px;
